fixed banner issue on mobile

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -326,7 +326,7 @@ hr {
 }
 
 #demo2 {
-    background-image: url("../assets/bg.png");
+    background-image: url("../assets/demo.jpg");
     background-repeat: no-repeat;
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
